--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
               </li>
               <li class="mb-2">
                 <a
-                  href="#"
+                  href="ai.html"
                   class="ai flex items-center px-6 py-3 hover:bg-gray-700"
                 >
                   <i class="fas fa-robot mr-3"></i> AI Assistant
