--- a/index.html
+++ b/index.html
@@ -151,14 +151,15 @@
                   <i class="fas fa-file-invoice-dollar mr-3"></i> Receipts & Issues
                 </a>
               </li>
-              <li class="mb-2">
-                <a
-                  href="ai.html"
-                  class="ai flex items-center px-6 py-3 hover:bg-gray-700"
-                >
-                  <i class="fas fa-robot mr-3"></i> AI Assistant
-                </a>
-              </li>
+<li class="mb-2">
+  <a
+    href="#"
+    class="ai-tab flex items-center px-6 py-3 hover:bg-gray-700"
+  >
+    <i class="fas fa-robot mr-3"></i> AI Assistant
+  </a>
+</li>
+
               <li class="mb-2">
                 <a
                   href="#"
@@ -355,6 +356,12 @@
               </table>
             </div>
           </section>
+
+          <section id="aiAssistantSection" class="content-section hidden">
+  <h2 class="text-2xl font-bold mb-4">AI Assistant</h2>
+  <p>Here you can interact with the AI assistant.</p>
+</section>
+
 
           <!-- Users Section -->
           <section id="usersSection" class="content-section hidden">
