--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 <li class="mb-2">
   <a
     href="#"
-    class="ai-tab flex items-center px-6 py-3 hover:bg-gray-700"
+    class="aiAssistant-tab flex items-center px-6 py-3 hover:bg-gray-700"
   >
     <i class="fas fa-robot mr-3"></i> AI Assistant
   </a>
