--- a/index.html
+++ b/index.html
@@ -744,12 +744,21 @@
                 <label for="userDepartment" class="block text-sm font-medium text-gray-700">Department</label>
                 <select id="userDepartment" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                   <option value="">Select Department</option>
-                  <option value="Administration">Administration</option>
-                  <option value="Science">Science</option>
-                  <option value="Mathematics">Mathematics</option>
-                  <option value="Humanities">Humanities</option>
-                  <option value="Sports">Sports</option>
-                  <option value="Library">Library</option>
+                  <option value="Procurement">Procurement</option>
+                  <option value="Human Resource">Human Resource</option>
+                  <option value="Maintenance">Maintenance</option>
+                  <option value="Kitchen">Kitchen</option>
+                  <option value="Registry">Registry</option>
+                  <option value="Dispensary">Dispensary</option>
+                  <option value="Agriculture and Environmental Studies">Agriculture and Environmental Studies</option>
+                  <option value="Applied Sciences">Applied Sciences</option>
+                  <option value="Building and Civil Engineering">Building and Civil Engineering</option>
+                  <option value="Business and Liberal Studies">Business and Liberal Studies</option>
+                  <option value="Computing and Informatics">Computing and Informatics</option>
+                  <option value="Electrical and Electronics">Electrical and Electronics</option>
+                  <option value="Health Sciences">Health Sciences</option>
+                  <option value="Hospitality and Institutional Management">Hospitality and Institutional Management</option>
+                  <option value="Mechanical and Automotives">Mechanical and Automotives</option>
                 </select>
               </div>
               <div>
@@ -829,12 +838,21 @@
                 <label for="receiptDepartment" class="block text-sm font-medium text-gray-700">Department</label>
                 <select id="receiptDepartment" class="mt-1 block w-full border border-gray-300 rounded-md shadow-sm p-2" required>
                   <option value="">Select Department</option>
-                  <option value="Administration">Administration</option>
-                  <option value="Science">Science</option>
-                  <option value="Mathematics">Mathematics</option>
-                  <option value="Humanities">Humanities</option>
-                  <option value="Sports">Sports</option>
-                  <option value="Library">Library</option>
+                  <option value="Procurement">Procurement</option>
+                  <option value="Human Resource">Human Resource</option>
+                  <option value="Maintenance">Maintenance</option>
+                  <option value="Kitchen">Kitchen</option>
+                  <option value="Registry">Registry</option>
+                  <option value="Dispensary">Dispensary</option>
+                  <option value="Agriculture and Environmental Studies">Agriculture and Environmental Studies</option>
+                  <option value="Applied Sciences">Applied Sciences</option>
+                  <option value="Building and Civil Engineering">Building and Civil Engineering</option>
+                  <option value="Business and Liberal Studies">Business and Liberal Studies</option>
+                  <option value="Computing and Informatics">Computing and Informatics</option>
+                  <option value="Electrical and Electronics">Electrical and Electronics</option>
+                  <option value="Health Sciences">Health Sciences</option>
+                  <option value="Hospitality and Institutional Management">Hospitality and Institutional Management</option>
+                  <option value="Mechanical and Automotives">Mechanical and Automotives</option>
                 </select>
               </div>
               <div>
